--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -1,13 +1,13 @@
 doctype html
 html
 	head
-		title Team FESTIVAL
+		title storeUI Demo - Landing
 		
 		meta(charset="UTF-8")
 		meta(name="viewport", content="width=device-width,user-scalable=no,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0")
 		
 		link(rel="stylesheet", href="../../lib/css/swiper.min.css")
-		link(rel="stylesheet", href="../css/storeUI-1.0.css")
+		link(rel="stylesheet", href="../css/storeUI-1.0.min.css")
 	body
 		.collection-view
 			.horizontal-collection-view-cell.swiper-container#editorialCard
