Added iPad sizes to product media

--- a/src/html/product.jade
+++ b/src/html/product.jade
@@ -56,7 +56,21 @@ html
 					roundLengths : 'false',
 					slidesPerView :'auto',
 					slidesPerViewFit : false,
-					spaceBetween: 10,
+					spaceBetween: 32,
+					breakpoints: {
+						414: {
+							spaceBetween: 10
+						},
+						768: {
+							spaceBetween: 20
+						},
+						834: {
+							spaceBetween: 22
+						},
+						1024: {
+							spaceBetween: 30
+						}
+					}
 				}
 			}];
 			
