--- a/src/less/_mixins.less
+++ b/src/less/_mixins.less
@@ -12,7 +12,7 @@
 		padding-right: 32px;
 	}
 	
-	@media all and (min-width: 1023px) and (orientation: landscape) {
+	@media all and (min-width: 1023px) {
 		padding-left: 52px;
 		padding-right: 52px;
 	}
@@ -34,7 +34,7 @@
 		right: 32px;
 	}
 	
-	@media all and (min-width: 1023px) and (orientation: landscape) {
+	@media all and (min-width: 1023px) {
 		left: 52px;
 		right: 52px;
 	}
