--- a/src/less/cells/small-lockup-cell.less
+++ b/src/less/cells/small-lockup-cell.less
@@ -72,4 +72,14 @@
 			border-radius: 23px;
 		}
 	}
+	
+	&.watch-app .artwork-view {
+		border-radius: 31px;
+		
+		.shadow-view,
+		img,
+		.border-view {
+			border-radius: 31px;
+		}
+	}
 }
