--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -85,6 +85,22 @@ html
 							button.offer-button Get
 			
 			.title-header-view
+				p.title-label Watch App
+						
+			.horizontal-collection-view-cell.swiper-container.margin-bottom#watchApp
+				.swiper-wrapper
+					each _ in Array(3)
+						.small-lockup-cell.watch-app.swiper-slide
+							.artwork-view
+								.shadow-view
+								img(src="https://via.placeholder.com/62x62")
+								.border-view
+							.title-container
+								h4 App Name
+								h6 App Description
+							button.offer-button Get
+			
+			.title-header-view
 				p.title-label Action Cells
 			
 			each _ in Array(3)
@@ -203,6 +219,30 @@ html
 				}
 			}, {
 				id: "stickerPack",
+				options: {
+					roundLengths: 'false',
+					slidesPerView: 'auto',
+					slidesPerColumn: 3,
+					slidesPerGroup: 1,
+					spaceBetween: 32,
+					breakpoints: {
+						414: {
+							spaceBetween: 10,
+							slidesPerView: 1
+						},
+						768: {
+							spaceBetween: 20
+						},
+						834: {
+							spaceBetween: 22
+						},
+						1024: {
+							spaceBetween: 30
+						}
+					}
+				}
+			}, {
+				id: "watchApp",
 				options: {
 					roundLengths: 'false',
 					slidesPerView: 'auto',
