Added missing rating cell sizes for iPad

--- a/src/less/cells/product-rating-cell.less
+++ b/src/less/cells/product-rating-cell.less
@@ -41,18 +41,28 @@
 		
 		@media all and (min-width: 767px) and (orientation: portrait) {
 			right: 34px;
+			width: 344px;
 		}
 		
 		@media all and (min-width: 833px) and (orientation: portrait) {
 			right: 32px;
+			width: 374px;
 		}
 		
 		@media all and (min-width: 1023px) {
-			right: 52px;
+			right: 242px;
+			width: 350px;
+		}
+		
+		@media all and (min-width: 1111px) and (orientation: landscape) {
+			right: 261px;
+			width: 384px;
 		}
 		
 		@media all and (min-width: 1365px) and (orientation: landscape) {
-			right: 51px;
+			left: 419px;
+			right: auto;
+			width: 344px;
 		}
 		
 		.rating-row-view {
