--- a/src/less/collection-view.less
+++ b/src/less/collection-view.less
@@ -55,7 +55,8 @@
 		
 		.editorial-card,
 		.small-lockup-cell,
-		.medium-lockup-cell {
+		.medium-lockup-cell,
+		.product-review-cell {
 			.width();
 		}
 	}
