--- a/src/less/intro.less
+++ b/src/less/intro.less
@@ -24,3 +24,12 @@ a {
 	display: block;
 	text-decoration: none;
 }
+
+.row {
+	display: flex;
+	justify-content: space-between;
+	
+	.col-auto {
+		flex: 1;
+	}
+}
