Added annotation cell (Information)

--- a/src/html/product.jade
+++ b/src/html/product.jade
@@ -92,6 +92,7 @@ html
 			.title-header-view
 				p.title-label What's New
 				a.header-button(href="#") Version History
+			
 			.titled-paragraph-cell
 				.row
 					p.primary-subtitle Version 1.0
@@ -99,7 +100,20 @@ html
 				.expandable-text-view(data-max-lines="3")
 					p Ea pariatur ex laboris Lorem ex. Elit consequat esse et non ad aliqua aliqua magna minim minim. Proident commodo ad laborum laborum cupidatat magna aute tempor consequat Lorem aliquip consectetur incididunt. Ut veniam nostrud occaecat aliqua do id est ad non. Voluptate fugiat adipisicing mollit pariatur duis eu enim veniam dolore nulla dolore sit. Ad in veniam voluptate eu esse deserunt consequat occaecat consequat incididunt mollit.
 					button.fade-in-button More
-						
+					
+			.title-header-view
+				p.title-label Information
+			
+			.annotation-collection
+				.annotation-cell
+					p.title-label Seller
+					p.subtitle-label FESTIVAL Development
+				.annotation-cell
+					p.title-label Size
+					p.subtitle-label NaN MB
+				.annotation-cell
+					p.title-label Category
+					p.subtitle-label Demo
 		script(src="../../lib/js/swiper.min.js")
 		script.
 			let swipers = {};
