--- a/src/less/button.less
+++ b/src/less/button.less
@@ -43,9 +43,9 @@ button {
 		background-color: #F0F0F7;
 		transition: color .4s;
 		
-		& + & {
-			margin-top: 10px;
-		}
+		// & + & {
+		// 	margin-top: 10px;
+		// }
 		
 		&:active {
 			color: fade(#007AFF, 22%);
