--- a/src/less/collection-view.less
+++ b/src/less/collection-view.less
@@ -64,24 +64,20 @@
 	.titled-button-stack {
 		padding: 0 20px;
 		
-		@media all and (min-width: 767px) and (orientation: portrait) {
-			padding: 0 34px;
-		}
-		
-		@media all and (min-width: 833px) and (orientation: portrait) {
-			padding: 0 32px;
-		}
-		
-		@media all and (min-width: 1024px) and (orientation: landscape) {
-			padding: 0 52px;
-		}
-		
-		@media all and (min-width: 1365px) and (orientation: landscape) {
-			padding: 0 51px;
-		}
+		.padding();
 		
 		&.margin-bottom {
 			margin-bottom: 32px;
+		}
+		
+		.titled-button + .titled-button {
+			margin-top: 10px;
+		}
+		@media all and (min-width: 767px) {
+			.titled-button:not(:nth-child(3n+1)) {
+				margin-top: 0;
+				margin-left: 10px;
+			}
 		}
 	}
 	
