Added footnote cell (copyright) Made annotation cells (in theory) expandable

--- a/src/html/product.jade
+++ b/src/html/product.jade
@@ -114,6 +114,21 @@ html
 				.annotation-cell
 					p.title-label Category
 					p.subtitle-label Demo
+				.annotation-cell.expandable
+					p.title-label Compatibility
+					p.subtitle-label With iPad
+				.annotation-cell
+					p.title-label Languages
+					p.subtitle-label German
+				.annotation-cell
+					p.title-label Age
+					p.subtitle-label 4+
+				.annotation-cell
+					p.title-label In App Purchases
+					p.subtitle-label No
+					
+			.footnote-cell
+				p &copy; 2018 Team FESTIVAL
 		script(src="../../lib/js/swiper.min.js")
 		script.
 			let swipers = {};
