Started working on JavaScript components

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -123,150 +123,6 @@ html
 				button.titled-button.column.column-12.medium-4(disabled) Disabled
 				
 		script(src="../../lib/js/swiper.min.js")
+		script(src="../js/storeUI-1.0.js")
 		script.
-			let swipers = {};
-			let swiperConstructors = [{
-				id: "editorialCard",
-				options: {
-					roundLengths : 'false',
-					slidesPerView :'auto',
-					slidesPerViewFit : false,
-					spaceBetween: 32,
-					breakpoints: {
-						414: {
-							spaceBetween: 10
-						},
-						768: {
-							spaceBetween: 20
-						},
-						834: {
-							spaceBetween: 22
-						},
-						1024: {
-							spaceBetween: 30
-						}
-					}
-				}
-			}, {
-				id: "smallLockup",
-				options: {
-					roundLengths: 'false',
-					slidesPerView: 'auto',
-					slidesPerColumn: 3,
-					slidesPerGroup: 1,
-					spaceBetween: 32,
-					breakpoints: {
-						414: {
-							spaceBetween: 10,
-							slidesPerView: 1
-						},
-						768: {
-							spaceBetween: 20
-						},
-						834: {
-							spaceBetween: 22
-						},
-						1024: {
-							spaceBetween: 30
-						}
-					}
-				}
-			}, {
-				id: "mediumLockup",
-				options: {
-					roundLengths: 'false',
-					slidesPerView: 'auto',
-					slidesPerColumn: 2,
-					slidesPerGroup: 1,
-					spaceBetween: 32,
-					breakpoints: {
-						414: {
-							spaceBetween: 10,
-							slidesPerView: 1
-						},
-						768: {
-							spaceBetween: 20
-						},
-						834: {
-							spaceBetween: 22
-						},
-						1024: {
-							spaceBetween: 30
-						}
-					}
-				}
-			}, {
-				id: "brick",
-				options: {
-					roundLengths : 'false',
-					slidesPerView :'auto',
-					slidesPerViewFit : false,
-					spaceBetween: 32,
-					breakpoints: {
-						414: {
-							spaceBetween: 10
-						},
-						768: {
-							spaceBetween: 20
-						},
-						834: {
-							spaceBetween: 22
-						},
-						1024: {
-							spaceBetween: 30
-						}
-					}
-				}
-			}, {
-				id: "stickerPack",
-				options: {
-					roundLengths: 'false',
-					slidesPerView: 'auto',
-					slidesPerColumn: 3,
-					slidesPerGroup: 1,
-					spaceBetween: 32,
-					breakpoints: {
-						414: {
-							spaceBetween: 10,
-							slidesPerView: 1
-						},
-						768: {
-							spaceBetween: 20
-						},
-						834: {
-							spaceBetween: 22
-						},
-						1024: {
-							spaceBetween: 30
-						}
-					}
-				}
-			}, {
-				id: "watchApp",
-				options: {
-					roundLengths: 'false',
-					slidesPerView: 'auto',
-					slidesPerColumn: 3,
-					slidesPerGroup: 1,
-					spaceBetween: 32,
-					breakpoints: {
-						414: {
-							spaceBetween: 10,
-							slidesPerView: 1
-						},
-						768: {
-							spaceBetween: 20
-						},
-						834: {
-							spaceBetween: 22
-						},
-						1024: {
-							spaceBetween: 30
-						}
-					}
-				}
-			}];
-			
-			swiperConstructors.forEach(item => {
-				swipers[item["id"]] = new Swiper(document.getElementById(item["id"]), item["options"]);
-			});
+			const app = new storeUI();
