Added link cells (Privacy Policy) Added margin to footnote cell

--- a/src/html/product.jade
+++ b/src/html/product.jade
@@ -126,7 +126,13 @@ html
 				.annotation-cell
 					p.title-label In App Purchases
 					p.subtitle-label No
-					
+			
+			.product-page-link-collection
+				a.product-page-link-cell.developer-website(href="https://festival.ml", target="_blank")
+					p.title-label Developer Website
+				a.product-page-link-cell.privacy-policy(href="https://festival.ml/impressum/", target="_blank")
+					p.title-label Privacy Policy
+
 			.footnote-cell
 				p &copy; 2018 Team FESTIVAL
 		script(src="../../lib/js/swiper.min.js")
