Expandable texts can now be expanded

--- a/src/less/expandable-text.less
+++ b/src/less/expandable-text.less
@@ -37,5 +37,9 @@
 			background: linear-gradient(left, rgba(255, 255, 255, 0) 0%, #FFFFFF 80%);
 			background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, #FFFFFF 80%);
 		}
+		
+		&.hidden {
+			display: none;
+		}
 	}
 }
