Fixed expandable text redirect Fixed expandable text button background

--- a/src/html/index.jade
+++ b/src/html/index.jade
@@ -14,14 +14,15 @@ html
 				.swiper-wrapper
 					each _ in Array(6)
 						.editorial-card.swiper-slide
-							p.caption-label Header
-							p.title-label App Name
-							p.subtitle-label App Description
-							
-							.artwork-view
-								.shadow-view
-								img(src="https://via.placeholder.com/384x247")
-								.border-view
+							a(href="product.html")
+								p.caption-label Header
+								p.title-label App Name
+								p.subtitle-label App Description
+								
+								.artwork-view
+									.shadow-view
+									img(src="https://via.placeholder.com/384x247")
+									.border-view
 			.title-header-view
 				p.title-label Small Lockup
 				a.header-button(href="#") Header Button
