--- a/src/less/cells/annotation-cell.less
+++ b/src/less/cells/annotation-cell.less
@@ -31,9 +31,9 @@
 			}
 		}
 		
-		&:last-child:not(.force-separator):after {
-			display: none;
-		}
+		// &:last-child:not(.force-separator):after {
+		// 	display: none;
+		// }
 		
 		&.expandable {
 			&:not(.expanded) {
