--- a/src/less/cells/product-review-cell.less
+++ b/src/less/cells/product-review-cell.less
@@ -2,7 +2,7 @@
 
 .product-review-cell {
 	position: relative;
-	height: 220px;
+	min-height: 220px;
 	margin: 16px 0 24px;
 	background-color: #F0F0F8;
 	border-radius: 8px;
@@ -54,8 +54,7 @@
 			background-color: #F0F0F8;
 			
 			&:after {
-				background: linear-gradient(left, rgba(255, 255, 255, 0) 0%, #F0F0F8 80%);
-				background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, #F0F0F8 80%);
+				background: linear-gradient(to right, rgba(240, 240, 248, 0) 0%, #F0F0F8 80%);
 			}
 		}
 	}
