--- a/src/html/product.jade
+++ b/src/html/product.jade
@@ -85,7 +85,7 @@ html
 									- for (var i=0; i<5; i++)
 										.rating-star
 								p.author-label Anon
-							.expandable-text-view(data-max-lines="7")
+							.expandable-text-view(data-max-lines="7", data-redirect-uri="#")
 								p Non reprehenderit laborum eiusmod in commodo voluptate fugiat. Laborum aliquip reprehenderit ex do. Sint deserunt magna enim dolore officia labore sunt laboris nostrud fugiat excepteur amet sint. Veniam duis non commodo dolore deserunt amet et eu in ut nostrud sunt. Pariatur ipsum do ullamco ea eu pariatur eu tempor consequat consequat esse consectetur.
 								button.fade-in-button More
 								
