--- a/src/less/expandable-text.less
+++ b/src/less/expandable-text.less
@@ -34,8 +34,7 @@
 			width: 100%;
 			height: 100%;
 			transform: translate3d(-100%, 0, 0);
-			background: linear-gradient(left, rgba(255, 255, 255, 0) 0%, #FFFFFF 80%);
-			background: -webkit-linear-gradient(left, rgba(255, 255, 255, 0) 0%, #FFFFFF 80%);
+			background: linear-gradient(to right, rgba(255, 255, 255, 0) 0%, #FFFFFF 80%);
 		}
 		
 		&.hidden {
