Added Reviews demo, various fixes

--- a/src/html/product.jade
+++ b/src/html/product.jade
@@ -73,7 +73,7 @@ html
 							.rating-progress
 								.rating-progress-fill(style="width: 50%")
 			
-			.horizontal-collection-view-cell.swiper-container#reviewCell
+			.horizontal-collection-view-cell.product-review-collection.swiper-container
 				.swiper-wrapper
 					each _ in Array(4)
 						.product-review-cell.swiper-slide
