--- a/src/html/product.jade
+++ b/src/html/product.jade
@@ -57,7 +57,7 @@ html
 					
 			.title-header-view
 				p.title-label Ratings &amp; Reviews
-				a.header-button(href="#") See All
+				a.header-button(href="./reviews.html") See All
 				
 			.product-rating-cell
 				p.current-rating 5.0
@@ -85,7 +85,7 @@ html
 									- for (var i=0; i<5; i++)
 										.rating-star
 								p.author-label Anon
-							.expandable-text-view(data-max-lines="7", data-redirect-uri="#")
+							.expandable-text-view(data-max-lines="7", data-redirect-uri="./review.html")
 								p Non reprehenderit laborum eiusmod in commodo voluptate fugiat. Laborum aliquip reprehenderit ex do. Sint deserunt magna enim dolore officia labore sunt laboris nostrud fugiat excepteur amet sint. Veniam duis non commodo dolore deserunt amet et eu in ut nostrud sunt. Pariatur ipsum do ullamco ea eu pariatur eu tempor consequat consequat esse consectetur.
 								button.fade-in-button More
 								
@@ -117,16 +117,22 @@ html
 				.annotation-cell.expandable
 					p.title-label Compatibility
 					p.subtitle-label With iPad
+					.annotation-cell-item
+						p.text-label Requires iOS 12.0 or later. Compatible with iPhone, iPad and iPod touch.
 				.annotation-cell
 					p.title-label Languages
 					p.subtitle-label German
 				.annotation-cell
 					p.title-label Age
 					p.subtitle-label 4+
-				.annotation-cell
+				.annotation-cell.expandable
 					p.title-label In App Purchases
-					p.subtitle-label No
-			
+					p.subtitle-label Yes
+					- for (var i=0; i<5; i++)
+						.annotation-cell-item
+							p.text-label= `Donate $${i},99`
+							p.sub-text-label= `$${i},99`
+
 			.product-page-link-collection
 				a.product-page-link-cell.developer-website(href="https://festival.ml", target="_blank")
 					p.title-label Developer Website
