Various iPad related fixes

--- a/src/less/cells/product-review-cell.less
+++ b/src/less/cells/product-review-cell.less
@@ -77,7 +77,7 @@
 			justify-content: space-between;
 			
 			.product-review-cell {
-				min-width: calc(~"50% - 15px");
+				width: calc(~"50% - 15px");
 			}
 		}
 	}
