--- a/src/less/intro.less
+++ b/src/less/intro.less
@@ -13,6 +13,7 @@
 	font-size: 15px;
 	font-weight: 400;
 	// transform: translate3d(0, 0, 0);
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 
 :root {
